--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: node_js
 node_js: node
 install: npm install -g markdown-link-check
-script: markdown-link-check README.md
+script: markdown-link-check README.md -c config.json
