--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
                 "https://crates.io"
             ],
             "headers": {
-                "User-Agent": "broken links checker (https://github.com/dtolnay/rust-faq)",
+                "User-Agent": "broken links checker (https://github.com/dtolnay/rust-faq)"
             }
         }
     ]
